conversion_log.txt
  File "/home/runner/work/Pdf2md/Pdf2md/convert.py", line 51
    f.write("## 📄 PDF to Markdown Conversion Report
            ^
SyntaxError: unterminated string literal (detected at line 51)
